Add second flower

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,3 +36,11 @@
   position: absolute;
   border-radius: 50%;
 }
+
+.white {
+  background-color: white;
+}
+
+.red {
+  background-color: red;
+}
