--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,3 +48,23 @@
 .red {
   background-color: red;
 }
+
+.yellow {
+  background-color: yellow;
+}
+
+.purple {
+  background-color: purple;
+}
+
+.pink {
+  background-color: pink;
+}
+
+.green {
+  background-color: green;
+}
+
+.blue {
+  background-color: blue;
+}
