Add connection when a flower is clicked

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,6 @@
 
 #app {
   position: absolute;
-  background-color: purple;
   top: 0px;
   right: 0px;
   left: 0px;
@@ -62,7 +61,7 @@
 }
 
 .green {
-  background-color: green;
+  background-color: brown;
 }
 
 .blue {
