--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,7 +20,8 @@
 .garden {
   position: absolute;
   box-sizing: border-box;
-  background-color: green;
+  background-image: url(../graphics/garden.jpg);
+  background-size: cover;
   color: black;
   top: 0px;
   bottom: 0px;
@@ -38,6 +39,12 @@
 .flower {
   position: absolute;
   border-radius: 50%;
+}
+
+.connection {
+  background-position: center left;
+  background-size: auto 100%;
+  border-radius: 1em / 50%;
 }
 
 .white {
@@ -61,9 +68,9 @@
 }
 
 .green {
-  background-color: brown;
+  background-image: url(../graphics/player-purple.png);
 }
 
 .blue {
-  background-color: blue;
+  background-image: url(../graphics/player-purple.png);
 }
