Make the garden 10% transparent

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,7 +21,7 @@
 .garden {
   position: absolute;
   box-sizing: border-box;
-  background-image: url(../graphics/garden.png);
+  background-image: url(../graphics/garden-90.png);
   background-size: cover;
   color: black;
   top: 0px;
