--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,7 @@
   height: calc(9/16 * 100vw);
   max-height: 100vh;
   max-width: calc(16/9 * 100vh);
+  pointer-events: none;
 }
 
 .garden {
@@ -112,13 +113,13 @@
 }
 
 .tool-card {
-  border: solid 1px black;
   position: relative;
   border: solid black 5px;
-  width: 50%;
+  width: 90%;
   padding: 0px;
   height: 3em;
   max-height: 10em; /* Use correct value here when it is clear how hight the card is.*/
+  pointer-events: none;
 }
 
 .tool-card-left {
@@ -230,11 +231,12 @@
   margin: auto;
   top: 0;
   bottom: 0;
-  margin-left: 30%;
+  right: 60%;
   background-color: gray;
   border: solid blue 5px;
-  width: 20%;
+  width: 30%;
   max-height: 95%;
+  pointer-events: all;
 }
 
 .card--content {
@@ -243,7 +245,8 @@
   margin-left: auto;
   background-color: gray;
   border: solid green 5px;
-  width: 70%;
+  width: 60%;
   margin-top: 5px;
   margin-bottom: 5px;
+  pointer-events: all;
 }
