Use react components for score cards

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -250,3 +250,11 @@
   margin-bottom: 5px;
   pointer-events: all;
 }
+
+.card-score {
+  text-align: center;
+}
+
+.addon-remove {
+  text-align: center;
+}
