--- a/src/css/main.css
+++ b/src/css/main.css
@@ -128,6 +128,12 @@
   left: 3%;
 }
 
+.tool-card-list {
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.15em;
+}
+
 .tool-card {
   position: relative;
   width: 100%;
@@ -135,8 +141,7 @@
   height: calc((9/16 * 100vw) / 9);
   max-height: calc(100vh / 9);
   pointer-events: none;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin-top: 0.15em;
 }
 
 .tool-card-left {
@@ -208,14 +213,14 @@
   right: 50%;
   width: 40%;
   height: 100%;
-  box-shadow: 2px 2px 5px 4px rgba(138,138,138,1);
+  box-shadow: 0.05em 0.05em 0.2em 0.1em rgba(138,138,138,1);
 }
 
 .card--content {
   position: relative;
   margin-left: auto;
   height: 100%;
-  box-shadow: 5px 5px 10px 5px rgba(138,138,138,1);
+  box-shadow: 0.1em 0.1em 0.25em 0.1em rgba(138,138,138,1);
 }
 
 .card-score {
