Add yellow color

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,7 +72,7 @@
 }
 
 .connection.yellow {
-  background-image: url(../graphics/player-red.png);
+  background-image: url(../graphics/player-yellow.png);
 }
 
 .score {
